[gd_scene load_steps=2 format=3 uid="uid://dr0vfyymmn1a5"]

[ext_resource type="Script" uid="uid://eihg3dvaoo35" path="res://content/screens/save_screen/save_screen.gd" id="1_otfb2"]

[node name="SaveScreen" type="PanelContainer"]
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -105.5
offset_right = 60.5
offset_bottom = 105.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_otfb2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Slot1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Slot 1"

[node name="Slot2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Slot 2"

[node name="Slot3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Slot 3"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Autosave" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "AutoSave"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Slot1" to="." method="_on_slot_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Slot2" to="." method="_on_slot_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Slot3" to="." method="_on_slot_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Autosave" to="." method="_on_autosave_pressed"]
